<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.owasp.webgoat</groupId>
    <artifactId>webgoat-parent</artifactId>
    <packaging>pom</packaging>
    <version>8.2.3-SNAPSHOT</version>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.2</version>
    </parent>

    <name>WebGoat Parent Pom</name>
    <description>Parent Pom for the WebGoat Project. A deliberately insecure Web Application</description>
    <inceptionYear>2006</inceptionYear>
    <url>https://github.com/WebGoat/WebGoat</url>

    <organization>
        <name>OWASP</name>
        <url>https://github.com/WebGoat/WebGoat/</url>
    </organization>

    <licenses>
        <license>
            <name>GNU General Public License, version 2</name>
            <url>https://www.gnu.org/licenses/gpl-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>mayhew64</id>
            <name>Bruce Mayhew</name>
            <email>webgoat@owasp.org</email>
            <organization>OWASP</organization>
            <organizationUrl>https://github.com/WebGoat/WebGoat</organizationUrl>
        </developer>
        <developer>
            <id>nbaars</id>
            <name>Nanne Baars</name>
            <email>nanne.baars@owasp.org</email>
            <organizationUrl>https://github.com/nbaars</organizationUrl>
            <timezone>Europe/Amsterdam</timezone>
        </developer>
        <developer>
            <id>misfir3</id>
            <name>Jason White</name>
            <email>jason.white@owasp.org</email>
        </developer>
        <developer>
            <id>zubcevic</id>
            <name>René Zubcevic</name>
            <email>rene.zubcevic@owasp.org</email>
        </developer>
        <developer>
            <id>aolle</id>
            <name>Àngel Ollé Blázquez</name>
            <email>angel@olleb.com</email>
        </developer>
        <developer>
            <id>jwayman</id>
            <name>Jeff Wayman</name>
            <email/>
        </developer>
        <developer>
            <id>dcowden</id>
            <name>Dave Cowden</name>
            <email/>
        </developer>
        <developer>
            <id>lawson89</id>
            <name>Richard Lawson</name>
            <email/>
        </developer>
        <developer>
            <id>dougmorato</id>
            <name>Doug Morato</name>
            <email>doug.morato@owasp.org</email>
            <organization>OWASP</organization>
            <organizationUrl>https://github.com/dougmorato</organizationUrl>
            <timezone>America/New_York</timezone>
            <properties>
                <picUrl>https://avatars2.githubusercontent.com/u/9654?v=3&amp;s=150</picUrl>
            </properties>
        </developer>
    </developers>

    <mailingLists>
        <mailingList>
            <name>OWASP WebGoat Mailing List</name>
            <subscribe>https://lists.owasp.org/mailman/listinfo/owasp-webgoat</subscribe>
            <unsubscribe>Owasp-webgoat-request@lists.owasp.org</unsubscribe>
            <post>owasp-webgoat@lists.owasp.org</post>
            <archive>http://lists.owasp.org/pipermail/owasp-webgoat/</archive>
        </mailingList>
    </mailingLists>

    <scm>
        <url>https://github.com/WebGoat/WebGoat</url>
        <connection>scm:git:git@github.com:WebGoat/WebGoat.git</connection>
        <developerConnection>scm:git:git@github.com:WebGoat/WebGoat.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/WebGoat/WebGoat/issues</url>
    </issueManagement>

    <properties>
        <!-- Use UTF-8 Encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>

        <!-- Shared properties with plugins and version numbers across submodules-->
        <ant.version>1.6.5</ant.version>
        <asciidoctorj.version>2.5.2</asciidoctorj.version>
        <bootstrap.version>3.3.7</bootstrap.version>
        <cglib.version>2.2</cglib.version> <!-- do not update necessary for lesson -->
        <checkstyle.version>3.1.2</checkstyle.version>
        <commons-collections.version>3.2.1</commons-collections.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-io.version>2.6</commons-io.version>
        <commons-text.version>1.9</commons-text.version>
        <guava.version>30.1-jre</guava.version>
        <jjwt.version>0.9.1</jjwt.version>
        <jose4j.version>0.7.6</jose4j.version>
        <jsoup.version>1.14.3</jsoup.version>
        <jquery.version>3.5.1</jquery.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <pmd.version>3.15.0</pmd.version>
        <thymeleaf.version>3.0.14.RELEASE</thymeleaf.version>
        <wiremock.version>2.27.2</wiremock.version>
        <xml-resolver.version>1.2</xml-resolver.version>
        <xstream.version>1.4.5</xstream.version> <!-- do not update necessary for lesson -->
        <zxcvbn.version>1.5.2</zxcvbn.version>
    </properties>

    <modules>
        <module>webgoat-container</module>
        <module>webgoat-integration-tests</module>
    </modules>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <configLocation>config/checkstyle/checkstyle.xml</configLocation>
                    <suppressionsLocation>config/checkstyle/suppressions.xml</suppressionsLocation>
                    <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${pmd.version}</version>
                <configuration>
                    <targetJdk>${maven.compiler.target}</targetJdk>
                    <failurePriority>1
                    </failurePriority><!-- 5 means fail even on the lowest priority, 0 means never fail -->
                    <rulesets>
                        <!--suppress UnresolvedMavenProperty -->
                        <ruleset>${maven.multiModuleProjectDirectory}/config/pmd/pmd-ruleset.xml</ruleset>
                    </rulesets>
                    <failOnViolation>true</failOnViolation>
                    <printFailingErrors>true</printFailingErrors>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>restrict-log4j-versions</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedDependencies>
                                    <excludes combine.children="append">
                                        <exclude>org.apache.logging.log4j:log4j-core</exclude>
                                    </excludes>
                                </bannedDependencies>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>owasp</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>6.5.1</version>
                        <configuration>
                            <failBuildOnCVSS>7</failBuildOnCVSS>
                            <skipProvidedScope>true</skipProvidedScope>
                            <skipRuntimeScope>true</skipRuntimeScope>
                            <suppressionFiles>
                                <!--suppress UnresolvedMavenProperty -->
                                <suppressionFile>
                                    ${maven.multiModuleProjectDirectory}/config/dependency-check/project-suppression.xml
                                </suppressionFile>
                            </suppressionFiles>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


</project>
